--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@ li a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #000;
 }
 
 .hero-section::before {
@@ -106,11 +105,22 @@ li a {
   right: 0px;
   bottom: 0px;
   left: 0px;
-  background-image: url(img/banner.jpeg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  opacity: 0.25;
+  opacity: 0.8;
+  background-color: black;
+  z-index: 20;
+}
+
+.hero-section video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  object-fit: cover;
 }
 
 .hero-section .title {
@@ -118,6 +128,8 @@ li a {
   text-align: center;
   color: white;
   font-size: 1.15rem;
+  position: relative;
+  z-index: 20;
 }
 
 .hero-section .title p {
@@ -128,6 +140,8 @@ li a {
   position: relative;
   display: flex;
   gap: 2rem;
+  position: relative;
+  z-index: 20;
 }
 
 .hero-section .btn a:nth-child(1) {
